# ChangeLog for www-servers/monkeyd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/monkeyd/ChangeLog,v 1.42 2012/08/01 15:57:03 blueness Exp $

  01 Aug 2012; Anthony G. Basile <blueness@gentoo.org> monkeyd-1.0.1.ebuild:
  Stable arm, bug #426664

  17 Jul 2012; Anthony G. Basile <blueness@gentoo.org> monkeyd-1.0.1.ebuild:
  Stable ppc ppc64, bug #426664

  15 Jul 2012; Agostino Sarubbo <ago@gentoo.org> monkeyd-1.0.1.ebuild:
  Stable for amd64, wrt bug #426664

  15 Jul 2012; Jeff Horelick <jdhore@gentoo.org> monkeyd-1.0.1.ebuild:
  marked x86 per bug 426664

  15 Jul 2012; Anthony G. Basile <blueness@gentoo.org> -monkeyd-1.0.0.ebuild:
  Remove older unstable version

  15 Jul 2012; Anthony G. Basile <blueness@gentoo.org> monkeyd-1.0.1.ebuild:
  Keyword ~arm ~ppc64

*monkeyd-1.0.1 (16 Jun 2012)

  16 Jun 2012; Anthony G. Basile <blueness@gentoo.org> +monkeyd-1.0.1.ebuild:
  Version bump

  07 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  -monkeyd-0.33.0-r1.ebuild, -files/monkeyd-dont-strip-configure.patch,
  -files/monkeyd-fix-manpage-path.patch:
  Cleanup, monkeyd-fix-manpage-path.patch accepted upstream

*monkeyd-1.0.0 (07 Jun 2012)

  07 Jun 2012; Anthony G. Basile <blueness@gentoo.org> +monkeyd-1.0.0.ebuild,
  +files/monkeyd.confd, +files/monkeyd.initd:
  Version bump, fix init script

*monkeyd-0.33.0-r1 (23 May 2012)

  23 May 2012; Anthony G. Basile <blueness@gentoo.org> -monkeyd-0.33.0.ebuild,
  +monkeyd-0.33.0-r1.ebuild, +files/monkeyd-fix-manpage-path.patch:
  Install man pages in the correct section
  See: http://bugs.monkey-project.com/ticket/156

  24 Mar 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Adopt package

  21 Mar 2012; Pacho Ramos <pacho@gentoo.org> -monkeyd-0.32.0.ebuild,
  -monkeyd-0.9.1.ebuild, metadata.xml:
  Drop www-server herd as discussed in gentoo-dev ML. Drop old.

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> monkeyd-0.9.1.ebuild,