@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/monkeyd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/monkeyd/ChangeLog,v 1.42 2012/08/01 15:57:03 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/monkeyd/ChangeLog,v 1.43 2012/08/08 12:17:18 blueness Exp $
+
+*monkeyd-1.0.1-r1 (08 Aug 2012)
+
+  08 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
+  +monkeyd-1.0.1-r1.ebuild:
+  Move distribution's htdocs to doc dir, bug #429632
 
   01 Aug 2012; Anthony G. Basile <blueness@gentoo.org> monkeyd-1.0.1.ebuild:
   Stable arm, bug #426664
